--- a/Makefile.linux_arm
+++ b/Makefile.linux_arm
@@ -10,14 +10,14 @@ $(ODIR)_startup.o: $(ODIR)armstartup.o $(ODIR)armfileIO3.o $(ODIR)scon.o $(ODIR)
 	ld -r -o $(ODIR)_startup.o $(ODIR)armstartup.o $(ODIR)armdivmod.o $(ODIR)scon.o $(ODIR)armfileIO3.o $(ODIR)ufileIO2.o
 
 $(ODIR)scon.o: $(SDIR)scon.c
-#	gcc -c -O $(DEFINES) -o $(ODIR)scon.o $(SDIR)scon.c
-	$(CC) -O $(DEFINES) -ffunction-sections -fdata-sections $(SDIR)scon.c -S -o $(ODIR)scon.s
+#	gcc -marm -c -O $(DEFINES) -o $(ODIR)scon.o $(SDIR)scon.c
+	gcc -marm -O $(DEFINES) -ffunction-sections -fdata-sections $(SDIR)scon.c -S -o $(ODIR)scon.s
 	mv $(ODIR)scon.s $(ODIR)scon.s.copy
 	grep -v -w ___main $(ODIR)scon.s.copy > $(ODIR)scon.s
 	as $(DEFINES_A) $(ODIR)scon.s -o $(ODIR)scon.o
 
 $(ODIR)ufileIO2.o: $(SDIR)ufileIO2.c
-	gcc -c -O $(DEFINES) -ffunction-sections -fdata-sections -o $(ODIR)ufileIO2.o $(SDIR)ufileIO2.c
+	gcc -marm -c -O $(DEFINES) -ffunction-sections -fdata-sections -o $(ODIR)ufileIO2.o $(SDIR)ufileIO2.c
 
 $(ODIR)armstartup.o: $(SDIR)armstartup.s
 	as $(ODIR)armstartup.s -o $(ODIR)armstartup.o
